--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -50,11 +50,11 @@
         display: block;
     }
     .mui-page .mui-table-view:first-child {
-         margin-bottom: 50px;
-         border: 0;
+        margin-bottom: 5px;
+        border: 0;
     }
     .mui-page .mui-table-view:last-child {
-        margin-bottom: 30px;
+        margin-top: 100px;
     }
     .nav-title{
         display: inline-block;
@@ -82,42 +82,25 @@
     <div class="mui-page-content bs-text-small">
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
-                <a href="#nick" class="mui-navigate-right">
-                    <span class="bs-text-gray nav-title">昵称</span>
-                    <span style="margin-right: 25px;">{{nickname}}</span>
-                </a>
-            </li>
-            <li class="mui-table-view-cell">
-                <a href="#">
-                    <span class="bs-text-gray nav-title">手机号</span>
-                    <span>{{mobile}}</span>
+                <a href="user-invite.html" class="mui-navigate-right">
+                    <span class="bs-text-small nav-title">获取体验基金</span>
                 </a>
             </li>
         </ul>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
-                <a href="frequent-contact-list.html" class="mui-navigate-right">
-                    <span class="bs-text-gray nav-title">入住人信息</span>
+                <a href="special.html" class="mui-navigate-right">
+                    <span class="bs-text-small nav-title">午夜特价房</span>
                 </a>
             </li>
         </ul>
-        <ul class="mui-table-view" style="margin-top: 5px">
-            <li class="mui-table-view-cell">
-                <a href="invoice-list.html" class="mui-navigate-right">
-                    <span class="bs-text-gray nav-title">发票管理</span>
-                </a>
-            </li>
-        </ul>
-        <ul class="mui-table-view" style="margin-top: 50px">
+        <ul class="mui-table-view" style="margin-top: 100px;">
             <li class="mui-table-view-cell">
                 <a href="about.html" class="mui-navigate-right">
-                    <span class="bs-text-gray nav-title">关于我们</span>
+                    <span class="bs-text-small nav-title">关于我们</span>
                 </a>
             </li>
         </ul>
-        <div class="mui-content-padded mui-text-center" style="margin-top: 25px">
-            客服电话： <a href="tel:4000-000-000">4000-000-000</a>
-        </div>
     </div>
 </div>
 <div ms-controller="change">
