绑定午夜特价和发现的跳转

--- a/js/pages/discover/special.html
+++ b/js/pages/discover/special.html
@@ -1,2 +1,2 @@
-<div style="height: 100vh; width: 100vw; background-size: cover; background-image:url(img/watch this space.jpg);"></div>
+<div style="height: 100vh; width: 100vw; background-size: cover; background-image:url(img/watch_this_space.jpg);"></div>
    
