店主页canvas在andriod系统里不对齐的bug修复

--- a/js/pages/franchisee/index.html
+++ b/js/pages/franchisee/index.html
@@ -4,7 +4,7 @@
             <!-- 今日 -->
             <div class="swiper-slide">
                 <div class="bs-text-xxx-larger fr-head">
-                    <canvas id="circle" style="position: fixed;z-index: -1;right: 0;top: 0;"></canvas>
+                    <canvas id="circle" style="position: fixed;z-index: -1;left: 0;top: 0;"></canvas>
                     {{@todaySale}}
                     <span class="bs-text-large bs-text-white"><br>今日销售额</span>
                 </div>
