av2要屏蔽双花括号要在ms-controller的元素上添加class='ms-controller'

--- a/js/pages/franchisee/index.html
+++ b/js/pages/franchisee/index.html
@@ -1,4 +1,4 @@
-<div ms-controller="graph">
+<div ms-controller="graph" class="ms-controller">
     <div class="swiper-container swiper">
         <div class="swiper-wrapper">
             <!-- 今日 -->
