首页定位的bug修复；发现页面去除冗余代码

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 </div>
-<div id="infoPage" class="mui-page" ms-controller="discover">
+<div id="infoPage" class="mui-page">
     <div class="mui-page-content bs-text-small">
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
@@ -101,49 +101,5 @@
                 </a>
             </li>
         </ul>
-    </div>
-</div>
-<div ms-controller="change">
-    <div id="name" class="mui-page" style="position: fixed;z-index: 999;">
-        <div class="mui-page-content">
-            <div class="mui-input-group">
-                <div class="mui-button-row" style="background-color: #efeff4;height: 37px;">
-                    <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
-                    <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isNameChange" ms-class-2="mui-text-gray:!isNameChange" ms-click="save">保存</div>
-                </div>
-                <div class="mui-input-row">
-                    <label>姓名</label>
-                    <input type="text" ms-duplex="newName" autofocus="autofocus" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="nick" class="mui-page" style="position: fixed;z-index: 999;">
-        <div class="mui-page-content">
-            <div class="mui-input-group">
-                <div class="mui-button-row" style="background-color: #efeff4;height: 37px;">
-                    <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
-                    <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isNicknameChange" ms-class-2="mui-text-gray:!isNicknameChange" ms-click="save">保存</div>
-                </div>
-                <div class="mui-input-row">
-                    <label>昵称</label>
-                    <input type="text" ms-duplex="newNickname" autofocus="autofocus" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="mobile" class="mui-page" style="position: fixed;z-index: 999;">
-        <div class="mui-page-content">
-            <div class="mui-input-group">
-                <div class="mui-button-row" style="background-color: #efeff4;height: 37px;">
-                    <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
-                    <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isMobileChange" ms-class-2="mui-text-gray:!isMobileChange" ms-click="save">保存</div>
-                </div>
-                <div class="mui-input-row">
-                    <label>手机号</label>
-                    <input type="text" ms-duplex="newMobile" autofocus="autofocus" />
-                </div>
-            </div>
-        </div>
     </div>
 </div>
