--- a/js/pages/assess/submitassess.html
+++ b/js/pages/assess/submitassess.html
@@ -111,7 +111,7 @@ h5 {
     <div class="space" style="padding-bottom: 10px;">
         <div class="left">
             <div style="text-align: center; margin-bottom: 7px;">
-                <img class="circle photo" src="http://img.ini.xin/uploadsImg/20160331/img/d708d83c-3835-443e-ae94-02c639509127100.jpg" />
+                <img class="circle photo" src="http://img.benjiudian.com/uploadsImg/20160331/img/d708d83c-3835-443e-ae94-02c639509127100.jpg" />
             </div>
             <div>
                 <div class="bs-text-smaller bs-text-153" style="text-align: center;">{{data.post}}</div>
