--- a/js/pages/invite/user-invite.html
+++ b/js/pages/invite/user-invite.html
@@ -12,8 +12,8 @@
 	    <br />
 	    <!-- <button id="sharePop" type="button" ms-on-tap="clickShare" class="mui-btn mui-btn-danger mui-btn-block" style="padding: 5px 20px;width: 70%;margin: 0 auto;">分享</button> -->
 	</div>
-	<div style="-webkit-column-count: 2;padding:2rem;font-size: 14px;position: absolute;bottom: 0;width: 100%;">
-		<a id="rulePop" ms-on-tap="clickRule" style="display: block; color: #cc9966;">条款细则</a>
-		<a id="oldPop" ms-on-tap="clickLog" style="display: block; color: #cc9966;" class="mui-text-right"><span>查看过去的邀请</span></a>
+	<div class="bs-text-large" style="padding:2rem;position: absolute;bottom: 0;width: 100%;display: flex; justify-content: space-around">
+		<a id="rulePop" class="bs-text-gold" ms-on-tap="clickRule">条款细则</a>
+		<a id="oldPop" class="bs-text-gold" ms-on-tap="clickLog"><span>查看过去的邀请</span></a>
 	</div>
 </div>
