--- a/js/pages/register/agreement.html
+++ b/js/pages/register/agreement.html
@@ -1,4 +1,9 @@
-<div class="content-rule">
+<style>
+    .popover-content p {
+        color: black;
+    }
+</style>
+<div class="content-rule bs-text-black bs-bg-white" style="height: 80vh;overflow: scroll;">
     <div class="mui-content-padded" style="padding: 1rem;">
         <h4>本酒店用户协议</h4>
             <li>
