--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -67,7 +67,7 @@
                     <div class="bs-text-smaller bs-text-black">管理模式</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="!isManage">
+            <div class="center-nav-item" ms-visible="!isManage">
                 <!-- <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">购物</div>
