--- a/js/pages/register/register-1.html
+++ b/js/pages/register/register-1.html
@@ -16,6 +16,7 @@
 		font-size: 36px;
 		height: auto !important;
 		font-weight: 200;
+		padding: 10px 0 !important;
 	}
 	input::-webkit-input-placeholder{
 		color: rgba(255,255,255,0.5);
