--- a/js/pages/manage/nav.html
+++ b/js/pages/manage/nav.html
@@ -1,4 +1,4 @@
-<div style="background: url('http://img.benjiudian.com/uploadsImg/20160315/img/b11050c2-c1ea-473a-ae30-2825c293a158ZIP.jpg'); background-position: center;background-size: cover;width: 100%;height: 220px;">
+<div style="background: url('http://img.bensue.com/uploadsImg/20160315/img/b11050c2-c1ea-473a-ae30-2825c293a158ZIP.jpg'); background-position: center;background-size: cover;width: 100%;height: 220px;">
 
 </div>
 
