--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -1,69 +1,86 @@
-<div id="pullrefresh" class="mui-scroll-wrapper">
+<div id="pullrefresh" class="mui-scroll-wrapper" ms-controller="hotel" ms-on-swipeup="su" ms-on-swipedown="sd">
     <div class="mui-scroll">
-        <div ms-controller="hotel">
-            <div style="position: absolute;top: 245px;z-index: 10;right: 0;padding-right: 10px;">
-                <button type="button" class="calender-icon" style="background-image: url(img/calender.png);" ms-on-tap="openTimePanel">
-                <div class="bs-text-red" style="margin: 7px 1px 0 0;">{{getToday('day')}}</div>
-                </button>
-            </div>
-            <div class="swiper-container swiper1" style="height: 300px;">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide" ms-repeat="galleryList" data-repeat-rendered="swiper1Render">
-                        <div style="width: 100%;height: 100%;background-size: cover;background-position: center;" ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'">
-                        </div>
+        <br><br>
+        <div style="position: absolute;top: 285px;z-index: 10;right: 0;padding-right: 10px;">
+            <button type="button" class="calender-icon" ms-css-background-image="type?'url(img/clock.png)':'url(img/calender.png)'" ms-on-tap="openTimePanel">
+            <div class="bs-text-red" ms-if="!type" style="margin: 7px 1px 0 0;">{{getToday('day')}}</div>
+            </button>
+        </div>
+        <div class="bs-bg-black bs-text-white bs-text-smaller" style="position: fixed;padding: 0 10px;top: 300px;left: 0;z-index: 9;">{{round(distance/1000,1)}} km</div>
+        <div class="swiper-container swiper1" style="height: 300px;">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" ms-repeat="galleryList" data-repeat-rendered="swiper1Render">
+                    <div style="width: 100%;height: 100%;background-size: cover;background-position: center;" ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'">
                     </div>
-                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+
+        <div class="pic-info">
+            <button class="expand" id="exp" ms-on-tap="expand">
+                <table width="100%">
+                    <tr>
+                        <!-- <td width="200px">
+                            <i>{{alias}}酒店&nbsp;</i><i>one'own</i>
+                        </td> -->
+                        <td class="mui-ellipsis small" valign="top">
+                            <i class="bs-text-larger">{{alias}}酒店&nbsp;</i><i>one'own</i><br />
+                            <i class="bs-text-large bs-text-gray" style="margin-top: 4px;">{{address}}</i>
+                        </td>
+                        <td class="tdclass bs-text-smaller" style="color: #333; width: 48px;">
+                            展开
+                        </td>
+                    </tr>
+                </table>
+            </button>
+            <div class="bs-bg-white bs-text-small info">
+                <div ms-on-tap="openIntroduction">介绍</div>
+                <div ms-on-tap="openFeature">特色</div>
+                <div style="position: relative;" ms-on-tap="openAssess">
+                    <span style="position: relative;top: -10px;display: inline-block;color: #ffa000;">{{score.totalScore}}星</span>
+                    <span class="bs-text-smaller" style="float: left;position: relative;top: -8vh;display: inline-block;width: 16vw;">{{assessCount}}评价</span>
+                </div>
+                <div ms-on-tap="goShop">周边</div>
+                <div ms-on-tap="openNav">地图</div>
+            </div>
+            <!-- 老的酒店展开面板-->
+            <!-- <div class="info bs-text-small">
+                <div ms-repeat="surplusList">
+                    <a href="javascript:void(0);">
+                        {{el.name}}<br>
+                        剩余{{el.surplus}}间
+                    </a>
                 </div>
             </div>
-
-            <div class="pic-info">
-                <button class="expand" id="exp" ms-on-tap="expand">
-                    <table width="100%">
-                        <tr>
-                            <!-- <td width="200px">
-                                <i>{{alias}}酒店&nbsp;</i><i>one'own</i>
-                            </td> -->
-                            <td class="mui-ellipsis small" valign="top">
-                                <i class="bs-text-larger">{{alias}}酒店&nbsp;</i><i>one'own</i><br />
-                                <i class="bs-text-large bs-text-gray" style="margin-top: 4px;">{{address}}</i>
-                            </td>
-                            <td class="tdclass bs-text-smaller" style="color: #333; width: 48px;">
-                                展开
-                            </td>
-                        </tr>
-                    </table>
-                </button>
-                <div class="info bs-text-small">
-                    <div ms-repeat="surplusList">
-                        <a href="javascript:void(0);">
-                            {{el.name}}<br>
-                            剩余{{el.surplus}}间
+            <div class="text-info bs-bg-white">
+                <p style="padding: 15px 10px;">{{introduction| truncate(200,'...')}}</p>
+                <ul>
+                    <li>
+                        <a ms-on-tap="openNav(lat,lng,name,address)">
+                            <h5>{{alias}}酒店：{{address}}</h5> 
+                         <span class="mui-badge mui-badge-success" style="background-color:black;">&nbsp;跟我走<span class="mui-icon mui-icon-location" style="font-size:20px"></span></span>
                         </a>
-                    </div>
-                </div>
-                <div class="text-info bs-bg-white">
-                    <p style="padding: 15px 10px;">{{introduction| truncate(200,'...')}}</p>
-                    <ul>
-                        <!-- <li>
-                            <a ms-on-tap="openNav(lat,lng,name,address)">
-                                <h5>{{alias}}酒店：{{address}}</h5> 
-                             <span class="mui-badge mui-badge-success" style="background-color:black;">&nbsp;跟我走<span class="mui-icon mui-icon-location" style="font-size:20px"></span></span>
-                            </a>
-                        </li> -->
-                        <div class="bs-text-gray bs-text-large" style="padding: 10px;">酒店特色</div>
-                        <li class="bs-text-small" ms-repeat="featureList">
-                            <a ms-on-tap="openFeature(el)" class="mui-navigate-right" style="padding: 10px;">
-                                <span style="margin-right:10px">{{el.title}}</span>
-                            </a>
-                            <hr>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                    </li>
+                    <div class="bs-text-gray bs-text-large" style="padding: 10px;">酒店特色</div>
+                    <li class="bs-text-small" ms-repeat="featureList" ms-on-tap="openFeature(el)" >
+                        <a class="mui-navigate-right" style="padding: 10px;">
+                            <span style="margin-right:10px">{{el.title}}</span>
+                        </a>
+                        <hr>
+                    </li>
+                </ul>
+            </div> -->
+        </div>
+        
+        <!-- 房型筛选 -->
+        <div class="typeFilter bs-text-larger" ms-visible="isShowRoomTypeFilter">
+            <div class="typeFilter-item" ms-class="active:tid==''" ms-on-tap="selectRoomType('')">all</div>
+            <div class="typeFilter-item" ms-class="active:tid==el.id" ms-repeat="roomTypeList" ms-on-tap="selectRoomType(el.id)" data-repeat-rendered="showRoomTypeFilter">{{el.name}}</div>
+        </div>
 
-            <div ms-repeat="roomList">
-                <!-- roomSlide -->
-            </div>
+        <div ms-repeat="roomList">
+            <!-- roomSlide -->
         </div>
     </div>
 </div>
