--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -28,14 +28,14 @@
                         <div class="swiper-scrollbar"></div>
                     </div>
                 </div>
-                <div class="mui-text-center" style="background: white;padding: 0 10px;">
+                <div class="mui-text-center" style="background: white;padding: 0 10px;" ms-if="!type">
                     <div style="margin-top: 35px" class="circle photo" ms-css-background-image="'url('+urlAPINet + room.designer.portraitUrl+')'">
                         &nbsp;
                     </div>
                     <br />
                     <h4 style="display: inline;margin-right: 10px;">{{room.designer.name}}</h4><small style="color:#999;">试睡师</small>
                     <div class="room-designer-message">{{room.designer.message | truncate(50,'...')}}</div>
-                    <button class="mui-btn" style="width: 100px;margin-bottom: 30px; border-radius: 0;" ms-on-tap="openAssess">更多信息</button>
+                    <button class="mui-btn" style="width: 100px;margin-bottom: 30px; border-radius: 0;" ms-on-tap="openDesigner">更多信息</button>
                 </div>
             </section>
             <section class="room-time">
