房间停用修改

--- a/js/pages/manage/room/room-ban.html
+++ b/js/pages/manage/room/room-ban.html
@@ -13,6 +13,11 @@
 			<h5 class="flex1">
         		<button id="datePicker1" data-options='{}' class="mui-btn mui-btn-block">{{date1}}</button>
 			</h5>
+		</div>
+	</div>
+	<div class="mui-input-group">
+		<div class="display-flex mui-navigate-right">
+			<h5 class="flex0" style="-webkit-box-pack: justify;">到</h5>
 			<h5 class="flex1">
         		<button id="datePicker2" data-options='{}' class="mui-btn mui-btn-block">{{date2}}</button>
 			</h5>
