新首页 bug 修改；弹窗滚动样式改成 auto

--- a/js/pages/assess/assess.html
+++ b/js/pages/assess/assess.html
@@ -19,7 +19,7 @@
    background-color: transparent;
 }
 </style>
-<div ms-controller="hotel" class="hotel-assess" style="height:80vh; background: #fff; overflow: scroll;">
+<div ms-controller="hotel" class="hotel-assess" style="height:80vh; background: #fff; overflow-y: auto;">
     <section class="bs-text-black" style="padding: 15px;">
         <table>
             <tr class="bs-text-larger">
