--- a/js/pages/hotel/hotelFeature.html
+++ b/js/pages/hotel/hotelFeature.html
@@ -19,7 +19,7 @@
         height: 36px;
     }
 </style>
-<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 15px;height: 80vh;overflow: scroll;">
+<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 15px;height: 80vh;overflow-y: auto;">
     <section>
         酒店服务
         <div>
