--- a/js/pages/hotel/hotelIntroduction.html
+++ b/js/pages/hotel/hotelIntroduction.html
@@ -8,7 +8,7 @@
         font-size: 13px;
     }
 </style>
-<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-introduction" style="padding: 15px;height: 80vh;overflow: scroll;">
+<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-introduction" style="padding: 15px;height: 80vh;overflow-y: auto;">
     <div class="bs-text-larger">{{name}}</div>
     <section>
         联系电话
