--- a/js/pages/invite/oldInvite.html
+++ b/js/pages/invite/oldInvite.html
@@ -1,4 +1,4 @@
-<div ms-controller="oldInvite" class="bs-bg-white bs-text-black" style="padding: 15px;height: 80vh;overflow: scroll;">
+<div ms-controller="oldInvite" class="bs-bg-white bs-text-black" style="padding: 15px;height: 80vh;overflow-y: auto;">
     <div class="bs-text-large" ms-if="count!==0" style="margin-bottom: 15px;">邀请记录</div>
     <div class="bs-text-small" ms-repeat="list" ms-if="count!==0" style="margin: 10px 0;">
         {{el.description}}
