--- a/js/pages/invite/rule.html
+++ b/js/pages/invite/rule.html
@@ -5,7 +5,7 @@
     margin-right: auto;
     transition: margin-top 100ms;
     background: #fff;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .content-rule li {
     font-size: 15px;
