--- a/js/pages/register/agreement.html
+++ b/js/pages/register/agreement.html
@@ -3,7 +3,7 @@
         color: black;
     }
 </style>
-<div class="content-rule bs-text-black bs-bg-white" style="height: 80vh;overflow: scroll;">
+<div class="content-rule bs-text-black bs-bg-white" style="height: 80vh;overflow-y: auto;">
     <div class="mui-content-padded" style="padding: 1rem;">
         <h4>本酒店用户协议</h4>
             <li>
