--- a/js/pages/room/designer.html
+++ b/js/pages/room/designer.html
@@ -1,4 +1,4 @@
-<div ms-controller="designer" style="height:80vh; background: #fff; overflow: scroll;">
+<div ms-controller="designer" style="height:80vh; background: #fff; overflow-y: auto;">
     <div class="mui-text-center">
         <br />
         <div class="circle photo" ms-css-background-image="'url('+urlAPINet + designer.portraitUrl+')'">
