--- a/js/util/contactList.html
+++ b/js/util/contactList.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div style="height: 55vh;overflow-y: scroll;margin-top: 10px;">
+    <div style="height: 55vh;overflow-y: auto;margin-top: 10px;">
         <div class="mui-table-view">
             <div class="mui-table-view-cell mui-checkbox mui-right" ms-repeat="list" ms-data-index="$index" style="z-index: 9;">
                 <input type="checkbox" ms-duplex-number="selectedList" ms-attr-value="$index" style="z-index: 1; top: 12px;">
