--- a/js/pages/assess/assess.html
+++ b/js/pages/assess/assess.html
@@ -87,6 +87,6 @@
             </div>
         </div>
         <br>
-        <button class="mui-btn mui-btn-block bs-bg-black bs-text-white" style="padding: 5px 0;" ms-if="isShowLoadMoreAssessBtn" ms-on-tap="loadMoreAssess">加载更多</button>
+        <button class="bs-btn-loadmore" ms-if="isShowLoadMoreBtn" ms-on-tap="loadMore">加载更多</button>
     </section>
 </div>
