--- a/js/pages/user/frequent-contact-list.html
+++ b/js/pages/user/frequent-contact-list.html
@@ -5,10 +5,6 @@
     h5{
         color: black;
     }
-    .btn{
-        width:100% !important;
-        padding: 10px 5px;
-    }
     .btn-operate{
         width: 36px;
         height: 36px;
@@ -41,6 +37,11 @@
             </div>
             <hr style="border: 1px solid #ddd;border-width: 1px 0 0 0">
             <div>
+                <div class="bs-text-gray" style="display: inline-block; float: left; font-size: 14px; padding-top: 11px;" ms-click="setDefault($index)">
+                    默认入住人
+                    <img src="img/checked.png" alt="选中" style="width: 12px;" ms-if="defaultList.indexOf($index)>-1">
+                    <img src="img/unchecked.png" alt="未选中" style="width: 12px;" ms-if="defaultList.indexOf($index)==-1">
+                </div>
                 <img src="img/delete.png" class="btn-operate"  ms-click="del($index)">
                 <img src="img/edit.png" class="btn-operate"  ms-click="edit($index)">
             </div>
