样式微调；暂时隐藏特色弹框的酒店服务

--- a/js/util/roomSlide-room.html
+++ b/js/util/roomSlide-room.html
@@ -1,16 +1,3 @@
-<style>
-    .room-amenity {
-        height: 40px;
-    }
-    .room-amenity-item {
-        background: #efeff4;
-    }
-    .room-amenity-text {
-        color: black;
-        margin-left: 8px;
-        margin-right: 8px;
-    }
-</style>
 <div class="swiper-slide-item">
     <a href="###" ms-on-tap="goRoom(el.id)">
         <div ms-css-background-image="url({{urlAPINet + el.coverUrl}})">
@@ -22,11 +9,11 @@
             </label>
         </div>
     </a>
-    <div class="swiper-container swiper3 room-amenity">
-        <div class="swiper-wrapper" style="padding-left: 0;background: black;">
-            <div class="swiper-slide room-amenity-item" ms-repeat-cl="el.amenityList" data-repeat-rendered="swiper3Render">
+    <div class="swiper-container swiper3 hotel-room-amenity">
+        <div class="swiper-wrapper" style="padding-left: 0;">
+            <div class="swiper-slide hotel-room-amenity-item" ms-repeat-cl="el.amenityList" data-repeat-rendered="swiper3Render">
                 <img ms-attr-src="urlAPINet + cl.ico" ms-attr-alt="cl.name" style="width: 20px;height: 20px;margin-left: 5px" />
-                <label class="bs-text-small room-amenity-text">{{cl.name}}</label>
+                <label class="bs-text-small hotel-room-amenity-text">{{cl.name}}</label>
             </div>
             <div class="swiper-scrollbar"></div>
         </div>
