--- a/js/pages/hotel/hotelFeature.html
+++ b/js/pages/hotel/hotelFeature.html
@@ -19,8 +19,8 @@
         height: 36px;
     }
 </style>
-<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 15px;height: 80vh;overflow: scroll;">
-    <section>
+<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 15px;height: 80vh;overflow-y: auto;">
+    <section style="display: none;">
         酒店服务
         <div>
             <div class="item" ms-repeat="serviceList">
